[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PreferencesUi.gd" type="Script" id=1]

[node name="Preferences" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="WindowHolder" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 519.0
margin_bottom = 307.0
rect_min_size = Vector2( 512, 300 )

[node name="Header" type="Label" parent="Panel/WindowHolder"]
margin_right = 512.0
margin_bottom = 15.0
text = "Preferences"

[node name="HSeparator" type="HSeparator" parent="Panel/WindowHolder"]
margin_top = 19.0
margin_right = 512.0
margin_bottom = 23.0

[node name="GridContainer" type="ScrollContainer" parent="Panel/WindowHolder"]
margin_top = 27.0
margin_right = 512.0
margin_bottom = 267.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Grid" type="VBoxContainer" parent="Panel/WindowHolder/GridContainer"]
margin_right = 512.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/WindowHolder"]
margin_top = 271.0
margin_right = 512.0
margin_bottom = 275.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/WindowHolder"]
margin_top = 279.0
margin_right = 512.0
margin_bottom = 300.0
alignment = 1

[node name="LeftSpacer" type="Control" parent="Panel/WindowHolder/HBoxContainer"]
margin_right = 139.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="Panel/WindowHolder/HBoxContainer"]
margin_left = 143.0
margin_right = 184.0
margin_bottom = 21.0
text = "Reset"

[node name="MidSpacer" type="Control" parent="Panel/WindowHolder/HBoxContainer"]
margin_left = 188.0
margin_right = 327.0
margin_bottom = 21.0
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="Panel/WindowHolder/HBoxContainer"]
margin_left = 331.0
margin_right = 369.0
margin_bottom = 21.0
text = "Save"

[node name="RightSpacer" type="Control" parent="Panel/WindowHolder/HBoxContainer"]
margin_left = 373.0
margin_right = 512.0
margin_bottom = 21.0
size_flags_horizontal = 3

[connection signal="pressed" from="Panel/WindowHolder/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Panel/WindowHolder/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
